# papers-finder

./: README.md  pyproject.toml  results.csv
src/papers_finder/: api.py  clean_filters.py  cli.py  csv_writer.py
tests/: test_filters.py
